--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,7 @@ security:
          - { path: ^/partner, roles: ROLE_ADMIN }
          - { path: ^/template, roles: ROLE_ADMIN }
          - { path: ^/mods, roles: ROLE_ADMIN }
+         - { path: ^/user, roles: ROLE_ADMIN }
 
 when@test:
     security:
