--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,12 +28,18 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+    role_hierarchy:
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
+        ROLE_ADMIN: [ROLE_MANAGER]
+        ROLE_MANAGER: [ROLE_USER_PARTNER]
+        ROLE_USER_PARTNER: [ROLE_USER_STRUCTURE]
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    
     access_control:
          - { path: ^/partner, roles: ROLE_ADMIN }
          - { path: ^/template, roles: ROLE_ADMIN }
-         - { path: ^/mods, roles: ROLE_ADMIN }
+         - { path: ^/mods, roles: ROLE_MANAGER }
          - { path: ^/user, roles: ROLE_ADMIN }
 
 when@test:
