--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,12 +35,12 @@ security:
     # Note: Only the *first* access control that matches will be used
     
     access_control:
-         - { path: ^/partner, roles: ROLE_ADMIN }
-         - { path: ^/partner/, roles: ROLE_MANAGER }
+        #  - { path: ^/partner, roles: ROLE_ADMIN }
+        #  - { path: ^/partner/, roles: ROLE_MANAGER }
          - { path: ^/structure, roles: ROLE_USER_STRUCTURE }
          - { path: ^/template, roles: ROLE_ADMIN }
          - { path: ^/mods, roles: ROLE_ADMIN }
-         - { path: ^/user, roles: ROLE_ADMIN }
+        #  - { path: ^/user, roles: ROLE_ADMIN }
 
 when@test:
     security:
