--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
+    "engines": {
+        "node": "v18.12.0",
+        "npm": "8.14.0"
+    },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
