--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "build": "encore production --progress"
     },
     "engines": {
-        "node": "v18.12.0",
-        "npm": "8.14.0"
+        "node": "v18.12.*",
+        "npm": "8.14.*"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
